- clean up server side - rework client websocket template

--- a/src/angular/src/app/components/main/main.component.html
+++ b/src/angular/src/app/components/main/main.component.html
@@ -1,5 +1,18 @@
-<div>
-  <button class="option-button" (click)="createGame()">Create a game</button>
-  <br>
-  <button class="option-button" (click)="joinGame()">Join a game</button>
+<div class="container">
+  <div class="text-center">
+    <hr>
+    <button
+      class="option-button col-md-4"
+      (click)="createGame()">
+      <h1>Create a game</h1>
+    </button>
+    <hr>
+    <button
+      class="option-button col-md-4"
+      (click)="joinGame()">
+      <h1 >Join a game</h1>
+    </button>
+    <hr>
+  </div>
 </div>
+
