--- a/src/angular/src/app/components/player-options/player-options.component.html
+++ b/src/angular/src/app/components/player-options/player-options.component.html
@@ -1,7 +1,29 @@
-<div class="buttons">
-  <button class="option-button" (click)="sendOption()">First Option</button>
-  <button class="option-button" (click)="sendOption()">asdasaas Option</button>
-  <br>
-  <button class="option-button" (click)="sendOption()">12afsff Option</button>
-  <button class="option-button" (click)="sendOption()">12afsff aa s sa</button>
+<div class="container">
+  <div class="text-center">
+    <hr>
+    <div class="buttons">
+      <button
+        class="option-button col-md-4"
+        (click)="sendOption()">
+        First Option
+      </button>
+      <button
+        class="option-button col-md-4"
+        (click)="sendOption()">
+        asdasaas Option
+      </button>
+      <button
+        class="option-button col-md-4"
+        (click)="sendOption()">
+        12afsff Option asdas
+      </button>
+      <button
+        class="option-button col-md-4"
+        (click)="sendOption()">
+        12afsff aa s sa
+      </button>
+      <hr>
+    </div>
+
+  </div>
 </div>
