- add a bit of game wiring logic

--- a/src/angular/src/app/components/main/main.component.html
+++ b/src/angular/src/app/components/main/main.component.html
@@ -3,13 +3,13 @@
     <hr>
     <button
       class="option-button col-md-4"
-      (click)="createGame()">
+      routerLink="/create">
       <h1>Create a game</h1>
     </button>
     <hr>
     <button
       class="option-button col-md-4"
-      (click)="joinGame()">
+      routerLink="/games">
       <h1 >Join a game</h1>
     </button>
     <hr>
