- add question section - try to push question back to clients

--- a/src/angular/src/app/components/games/games.component.html
+++ b/src/angular/src/app/components/games/games.component.html
@@ -4,8 +4,8 @@
     <ng-template  ngFor let-game [ngForOf]="games">
       <button
         class="option-button col-md-4"
-        routerLink="/join">
-        {{game.name}}
+        (click)="join(game.name)"
+      >{{game.name}}
       </button>
       <hr>
     </ng-template>
